--- a/app/src/main/res/layout/toolbar_activity_main.xml
+++ b/app/src/main/res/layout/toolbar_activity_main.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/image_view_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_logo"
+                app:srcCompat="@drawable/ic_logo_main"
                 android:layout_gravity="start"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="1dp"
@@ -48,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                app:srcCompat="@drawable/ic_city"
+                app:srcCompat="@drawable/ic_city_main"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="7dp" app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="13dp" android:layout_marginBottom="14dp"
