--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorRed">#E62D37</color>
+    <color name="colorGray">#C2C1C1</color>
+    <color name="colorGrayText">#555151</color>
 </resources>
