--- a/app/src/main/res/layout/toolbar_activity_main.xml
+++ b/app/src/main/res/layout/toolbar_activity_main.xml
@@ -8,7 +8,7 @@
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
     <android.support.constraint.ConstraintLayout
-            android:id="@+id/layoutButton"
+            android:id="@+id/main_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="end"
