--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,24 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".activities.MainActivity">
 
     <include
-            android:id="@+id/toolbar"
-            layout="@layout/toolbar_activity_main"/>
+            android:id="@+id/toolbar_main"
+            layout="@layout/toolbar_main"/>
 
-    <FrameLayout
-            android:id="@+id/frame_layout"
+    <include
+            android:id="@+id/toolbar_kudago"
+            layout="@layout/toolbar_main_kudago"/>
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_event_card"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_event_card"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
-
-    </FrameLayout>
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager" tools:itemCount="30"
+    />
 
 </LinearLayout>
