--- a/app/src/main/res/layout/toolbar_main_kudago.xml
+++ b/app/src/main/res/layout/toolbar_main_kudago.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.design.widget.AppBarLayout
+        android:background="@color/colorWhite"
+        android:id="@+id/layout_toolbar_kudago"
+        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/layout_collapsing"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorWhite"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap">
 
     <TextView
             android:id="@+id/kudago_text_view"
             android:textSize="30sp"
-            android:text="@string/kudago_toolbar_view"
+            android:text="@string/kudago_text_view"
             android:textStyle="bold"
             android:textColor="@color/colorBlack"
             android:layout_marginStart="16dp"
@@ -17,4 +29,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
 
-</android.support.v7.widget.Toolbar>
+    </android.support.design.widget.CollapsingToolbarLayout>
+
+</android.support.design.widget.AppBarLayout>
