--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -1,83 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/scrollView">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="wrap_content">
 
-        <include
-            android:id="@+id/toolbar_event"
-            layout="@layout/toolbar_event"/>
-
-        <FrameLayout
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="260dp">
 
-        </FrameLayout>
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/view_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                </android.support.v4.view.ViewPager>
 
-        <TextView
+            </FrameLayout>
+
+            <TextView
                 android:id="@+id/text_view_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:textColor="@color/colorBlack"
                 android:textStyle="bold"
                 android:textAllCaps="true"
-                android:text="TITLE"
+                android:text="Музыкальный фестиваль LiveFest Summer"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/image_view_event"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"/>
 
-        <TextView
+            <TextView
                 android:id="@+id/text_view_short_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textColor="@color/colorBlack"
-                android:text="Small description"
+                android:text="Первый фестиваль LiveFest на курорте «Роза Хутор» собрал перспективные музыкальные проекты России и произвёл фурор у публики. Летняя версия будет ещё жарче и динамичнее, охватит ещё больше жанров, откроет новые имена и порадует свежими треками от признанных звёзд."
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/text_view_title"/>
 
-        <TextView
+            <TextView
                 android:id="@+id/text_view_full_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textColor="@color/colorGrayText"
-                android:text="Full description"
+                android:text="Спустя полгода сочинский курорт «Роза Хутор» снова приглашает меломанов на музыкальный фестиваль LiveFest Summer, в котором объединятся все радости южного отдыха: тёплое море, головокружительные горы, зажигательные танцы и сочные песни от талантливых молодых исполнителей. Главная сцена фестиваля расположится на высоте более полутора тысяч метров над уровнем моря, а гостей туда доставит канатная дорогая «Стрела». К ней присоединятся и другие площадки горного курорта, на которых в последнюю ночь фестиваля состоятся джем-сейшены и невероятные вечеринки. Представители современных музыкальных направлений наполнят пространство города музыкой и драйвом. Хедлайнеры LiveFest Summer, проекты Therr Maitz и Pompeya выступят с сумасшедшими концертами, Дельфин презентует долгожданный альбом «442», а главным украшением фестиваля станет бесподобная Земфира. Обладатели билетов получат промокод, предоставляющий скидку на проживание на курорте «Роза Хутор», и бесплатные поездки на канатной дороге «Стрела». Узнать больше о музыкальном фестивале LiveFest Summer вы можете на сайте, «ВКонтакте» или в Facebook."
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_title"/>
+                app:layout_constraintTop_toBottomOf="@+id/text_view_short_description"/>
 
-        <LinearLayout
+            <LinearLayout
                 android:id="@+id/location_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="12dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginEnd="16dp">
 
-            <ImageView
+                <ImageView
                     android:layout_width="14dp"
                     android:layout_height="18dp"
                     android:layout_gravity="center_vertical"
                     app:srcCompat="@drawable/ic_location"/>
 
-            <TextView
+                <TextView
                     android:id="@+id/text_view_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -85,7 +91,7 @@
                     android:layout_marginLeft="16dp"
                     tools:text="Location"
                     android:layout_gravity="center_vertical"
-                    android:textSize="14sp"/>
+                    android:textSize="16sp"/>
 
         </LinearLayout>
 
@@ -96,7 +102,7 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="12dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginEnd="16dp">
 
@@ -114,29 +120,29 @@
                     android:layout_marginLeft="16dp"
                     tools:text="Date"
                     android:layout_gravity="center_vertical"
-                    android:textSize="14sp"/>
+                    android:textSize="16sp"/>
 
         </LinearLayout>
 
-        <LinearLayout
+            <LinearLayout
                 android:id="@+id/cost_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="12dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="24dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
                 android:layout_marginEnd="16dp">
 
-            <ImageView
+                <ImageView
                     android:layout_width="14dp"
                     android:layout_height="18dp"
                     android:layout_gravity="center_vertical"
                     app:srcCompat="@drawable/ic_cost"/>
 
-            <TextView
+                <TextView
                     android:id="@+id/text_view_cost"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -144,10 +150,16 @@
                     android:layout_marginLeft="16dp"
                     tools:text="Cost"
                     android:layout_gravity="center_vertical"
-                    android:textSize="14sp"/>
+                    android:textSize="16sp"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </ScrollView>
 
-</ScrollView>
+    <include
+        android:id="@+id/toolbar_event"
+        layout="@layout/toolbar_event"/>
+
+</FrameLayout>
