--- a/app/src/main/res/layout/toolbar_main_kudago.xml
+++ b/app/src/main/res/layout/toolbar_main_kudago.xml
@@ -5,6 +5,7 @@
         android:id="@+id/layout_toolbar_kudago"
         android:fitsSystemWindows="true"
         android:layout_width="match_parent"
+        app:elevation="0dp"
         android:layout_height="wrap_content"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
