fixed cities activity

--- a/app/src/main/res/layout/activity_cities.xml
+++ b/app/src/main/res/layout/activity_cities.xml
@@ -10,7 +10,7 @@
             layout="@layout/toolbar_cities"/>
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_cities"
+            android:id="@+id/rec_view_cities"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
