--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             layout="@layout/toolbar_main_kudago"/>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_event_card"
+            android:id="@+id/rec_view_event_card"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="vertical"
