--- a/app/src/main/res/layout/city_model.xml
+++ b/app/src/main/res/layout/city_model.xml
@@ -5,7 +5,7 @@
         android:layout_height="56dp">
 
     <TextView
-            android:id="@+id/tv_city"
+            android:id="@+id/text_view_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -17,7 +17,7 @@
             android:layout_margin="16dp"/>
 
     <ImageView
-            android:id="@+id/iv_check"
+            android:id="@+id/image_view_check"
             android:src="@drawable/ic_check"
             android:layout_width="18dp"
             android:layout_height="14dp"
