--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -1,156 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+    <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
 
             <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="260dp">
+                    android:layout_width="match_parent"
+                    android:layout_height="260dp">
 
                 <android.support.v4.view.ViewPager
-                    android:id="@+id/view_pager"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        android:id="@+id/view_pager"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
                 </android.support.v4.view.ViewPager>
 
             </FrameLayout>
 
             <TextView
-                android:id="@+id/text_view_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:textColor="@color/colorBlack"
-                android:textStyle="bold"
-                android:textAllCaps="true"
-                android:text="Музыкальный фестиваль LiveFest Summer"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/image_view_event"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"/>
+                    android:id="@+id/text_view_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorBlack"
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
+                    android:text="Музыкальный фестиваль LiveFest Summer"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/image_view_event"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="16dp"/>
 
             <TextView
-                android:id="@+id/text_view_short_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="@color/colorBlack"
-                android:text="Первый фестиваль LiveFest на курорте «Роза Хутор» собрал перспективные музыкальные проекты России и произвёл фурор у публики. Летняя версия будет ещё жарче и динамичнее, охватит ещё больше жанров, откроет новые имена и порадует свежими треками от признанных звёзд."
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_title"/>
+                    android:id="@+id/text_view_short_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorBlack"
+                    android:text="Первый фестиваль LiveFest на курорте «Роза Хутор» собрал перспективные музыкальные проекты России и произвёл фурор у публики. Летняя версия будет ещё жарче и динамичнее, охватит ещё больше жанров, откроет новые имена и порадует свежими треками от признанных звёзд."
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_view_title"/>
 
             <TextView
-                android:id="@+id/text_view_full_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="@color/colorGrayText"
-                android:text="Спустя полгода сочинский курорт «Роза Хутор» снова приглашает меломанов на музыкальный фестиваль LiveFest Summer, в котором объединятся все радости южного отдыха: тёплое море, головокружительные горы, зажигательные танцы и сочные песни от талантливых молодых исполнителей. Главная сцена фестиваля расположится на высоте более полутора тысяч метров над уровнем моря, а гостей туда доставит канатная дорогая «Стрела». К ней присоединятся и другие площадки горного курорта, на которых в последнюю ночь фестиваля состоятся джем-сейшены и невероятные вечеринки. Представители современных музыкальных направлений наполнят пространство города музыкой и драйвом. Хедлайнеры LiveFest Summer, проекты Therr Maitz и Pompeya выступят с сумасшедшими концертами, Дельфин презентует долгожданный альбом «442», а главным украшением фестиваля станет бесподобная Земфира. Обладатели билетов получат промокод, предоставляющий скидку на проживание на курорте «Роза Хутор», и бесплатные поездки на канатной дороге «Стрела». Узнать больше о музыкальном фестивале LiveFest Summer вы можете на сайте, «ВКонтакте» или в Facebook."
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_short_description"/>
+                    android:id="@+id/text_view_full_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorGrayText"
+                    android:text="Спустя полгода сочинский курорт «Роза Хутор» снова приглашает меломанов на музыкальный фестиваль LiveFest Summer, в котором объединятся все радости южного отдыха: тёплое море, головокружительные горы, зажигательные танцы и сочные песни от талантливых молодых исполнителей. Главная сцена фестиваля расположится на высоте более полутора тысяч метров над уровнем моря, а гостей туда доставит канатная дорогая «Стрела». К ней присоединятся и другие площадки горного курорта, на которых в последнюю ночь фестиваля состоятся джем-сейшены и невероятные вечеринки. Представители современных музыкальных направлений наполнят пространство города музыкой и драйвом. Хедлайнеры LiveFest Summer, проекты Therr Maitz и Pompeya выступят с сумасшедшими концертами, Дельфин презентует долгожданный альбом «442», а главным украшением фестиваля станет бесподобная Земфира. Обладатели билетов получат промокод, предоставляющий скидку на проживание на курорте «Роза Хутор», и бесплатные поездки на канатной дороге «Стрела». Узнать больше о музыкальном фестивале LiveFest Summer вы можете на сайте, «ВКонтакте» или в Facebook."
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/text_view_short_description"/>
 
             <LinearLayout
-                android:id="@+id/location_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="12dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginEnd="16dp">
+                    android:id="@+id/location_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginEnd="16dp">
 
                 <ImageView
-                    android:layout_width="14dp"
-                    android:layout_height="18dp"
-                    android:layout_gravity="center_vertical"
-                    app:srcCompat="@drawable/ic_location"/>
+                        android:layout_width="14dp"
+                        android:layout_height="18dp"
+                        android:layout_gravity="center_vertical"
+                        app:srcCompat="@drawable/ic_location"/>
 
                 <TextView
-                    android:id="@+id/text_view_location"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="13dp"
-                    android:layout_marginLeft="16dp"
-                    tools:text="Location"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="16sp"/>
+                        android:id="@+id/text_view_location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginLeft="16dp"
+                        tools:text="Location"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="16sp"/>
 
-        </LinearLayout>
-
-        <LinearLayout
-                android:id="@+id/date_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="12dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginEnd="16dp">
-
-            <ImageView
-                    android:layout_width="14dp"
-                    android:layout_height="18dp"
-                    android:layout_gravity="center_vertical"
-                    app:srcCompat="@drawable/ic_date"/>
-
-            <TextView
-                    android:id="@+id/text_view_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="13dp"
-                    android:layout_marginLeft="16dp"
-                    tools:text="Date"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="16sp"/>
-
-        </LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/cost_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="12dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="16dp">
+                    android:id="@+id/date_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginEnd="16dp">
 
                 <ImageView
-                    android:layout_width="14dp"
-                    android:layout_height="18dp"
-                    android:layout_gravity="center_vertical"
-                    app:srcCompat="@drawable/ic_cost"/>
+                        android:layout_width="14dp"
+                        android:layout_height="18dp"
+                        android:layout_gravity="center_vertical"
+                        app:srcCompat="@drawable/ic_date"/>
 
                 <TextView
-                    android:id="@+id/text_view_cost"
-                    android:layout_width="wrap_content"
+                        android:id="@+id/text_view_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginLeft="16dp"
+                        tools:text="Date"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="16sp"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:id="@+id/cost_layout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="13dp"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="12dp"
                     android:layout_marginLeft="16dp"
-                    tools:text="Cost"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="16sp"/>
+                    android:layout_marginStart="24dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginEnd="16dp">
+
+                <ImageView
+                        android:layout_width="14dp"
+                        android:layout_height="18dp"
+                        android:layout_gravity="center_vertical"
+                        app:srcCompat="@drawable/ic_cost"/>
+
+                <TextView
+                        android:id="@+id/text_view_cost"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="13dp"
+                        android:layout_marginLeft="16dp"
+                        tools:text="Cost"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="16sp"/>
 
             </LinearLayout>
 
@@ -159,7 +159,7 @@
     </ScrollView>
 
     <include
-        android:id="@+id/toolbar_event"
-        layout="@layout/toolbar_event"/>
+            android:id="@+id/toolbar_event"
+            layout="@layout/toolbar_event"/>
 
 </FrameLayout>
