--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,51 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/main_frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".activities.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-            android:background="@color/colorWhite"
-            android:id="@+id/layout_toolbar_main"
-            android:layout_width="match_parent"
-            app:elevation="0dp"
-            android:layout_height="wrap_content">
-
-        <include
-                android:id="@+id/toolbar_main"
-                layout="@layout/toolbar_main"/>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.design.widget.CoordinatorLayout
-            android:id="@+id/layout_coordinator"
-            android:background="@color/colorWhite"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <include
-            android:id="@+id/toolbar_kudago"
-            layout="@layout/toolbar_main_kudago"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rec_view_event_card"
+    <LinearLayout
+            android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:itemCount="30"/>
+            android:orientation="vertical">
 
-    </android.support.design.widget.CoordinatorLayout>
+        <android.support.design.widget.AppBarLayout
+                android:background="@color/colorWhite"
+                android:id="@+id/layout_toolbar_main"
+                android:layout_width="match_parent"
+                app:elevation="0dp"
+                android:layout_height="wrap_content">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            <include
+                    android:id="@+id/toolbar_main"
+                    layout="@layout/toolbar_main"/>
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+        </android.support.design.widget.AppBarLayout>
 
-</LinearLayout>
+        <android.support.v4.widget.SwipeRefreshLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <android.support.design.widget.CoordinatorLayout
+                    android:id="@+id/layout_coordinator"
+                    android:background="@color/colorWhite"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <include
+                        android:id="@+id/toolbar_kudago"
+                        layout="@layout/toolbar_main_kudago"/>
+
+                <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rec_view_event_card"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scrollbars="vertical"
+                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                        tools:itemCount="30"/>
+
+            </android.support.design.widget.CoordinatorLayout>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+    </LinearLayout>
+
+    <RelativeLayout
+            android:id="@+id/error_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone">
+
+        <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"/>
+
+        <ImageView
+                android:id="@+id/image_view_error"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_error_image"/>
+
+        <TextView
+                android:id="@+id/text_view_error"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/text_error"
+                android:textColor="@color/colorBlack"
+                android:textSize="16sp"/>
+
+        <FrameLayout
+                android:id="@+id/frame_error_layout"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="@color/colorRed"
+                android:layout_alignParentBottom="true"
+                android:visibility="gone">
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:textSize="16sp"
+                    android:text="@string/text_error_bottom"
+                    android:textColor="@color/colorWhite"
+                    android:layout_gravity="center"/>
+
+        </FrameLayout>
+
+    </RelativeLayout>
+
+</FrameLayout>
