--- a/app/src/main/res/layout/toolbar_cities.xml
+++ b/app/src/main/res/layout/toolbar_cities.xml
@@ -8,6 +8,7 @@
     <ImageButton
             android:id="@+id/ib_close"
             android:src="@drawable/ic_cross"
+            android:onClick="onClickCross"
             android:layout_marginBottom="21dp"
             android:layout_marginStart="21dp"
             android:layout_marginTop="21dp"
