added click listener on event adapter

--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -36,7 +36,7 @@
                     android:textColor="@color/colorBlack"
                     android:textStyle="bold"
                     android:textAllCaps="true"
-                    android:text="Музыкальный фестиваль LiveFest Summer"
+                    android:text="TITLE"
                     android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/image_view_event"
                     app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
                     android:textColor="@color/colorBlack"
-                    android:text="Первый фестиваль LiveFest на курорте «Роза Хутор» собрал перспективные музыкальные проекты России и произвёл фурор у публики. Летняя версия будет ещё жарче и динамичнее, охватит ещё больше жанров, откроет новые имена и порадует свежими треками от признанных звёзд."
+                    android:text="Description"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
@@ -61,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
                     android:textColor="@color/colorGrayText"
-                    android:text="Спустя полгода сочинский курорт «Роза Хутор» снова приглашает меломанов на музыкальный фестиваль LiveFest Summer, в котором объединятся все радости южного отдыха: тёплое море, головокружительные горы, зажигательные танцы и сочные песни от талантливых молодых исполнителей. Главная сцена фестиваля расположится на высоте более полутора тысяч метров над уровнем моря, а гостей туда доставит канатная дорогая «Стрела». К ней присоединятся и другие площадки горного курорта, на которых в последнюю ночь фестиваля состоятся джем-сейшены и невероятные вечеринки. Представители современных музыкальных направлений наполнят пространство города музыкой и драйвом. Хедлайнеры LiveFest Summer, проекты Therr Maitz и Pompeya выступят с сумасшедшими концертами, Дельфин презентует долгожданный альбом «442», а главным украшением фестиваля станет бесподобная Земфира. Обладатели билетов получат промокод, предоставляющий скидку на проживание на курорте «Роза Хутор», и бесплатные поездки на канатной дороге «Стрела». Узнать больше о музыкальном фестивале LiveFest Summer вы можете на сайте, «ВКонтакте» или в Facebook."
+                    android:text="Full description"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
