--- a/app/src/main/res/layout/event_card_model.xml
+++ b/app/src/main/res/layout/event_card_model.xml
@@ -44,6 +44,7 @@
             android:textSize="14sp"
             android:ellipsize="end"
             android:lines="2"
+            android:layout_marginBottom="12dp"
             android:textColor="@color/colorBlack"
             android:text="Description"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +57,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="24dp"
