added check internet

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,14 +60,14 @@
     <RelativeLayout
             android:id="@+id/error_layout"
             android:background="@color/colorWhite"
+            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone">
+            android:layout_height="match_parent">
 
         <ImageView
                 android:id="@+id/image_view_error"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="78dp"
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_error_image"/>
 
@@ -75,8 +75,10 @@
                 android:id="@+id/text_view_error"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
+                android:layout_marginTop="26dp"
+                android:layout_below="@+id/image_view_error"
                 android:layout_centerHorizontal="true"
+                android:textAlignment="center"
                 android:text="@string/text_error"
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"/>
@@ -86,8 +88,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:background="@color/colorRed"
-                android:layout_alignParentBottom="true"
-                android:visibility="gone">
+                android:layout_alignParentBottom="true">
 
             <TextView
                     android:layout_width="wrap_content"
@@ -111,8 +112,8 @@
 
         <ProgressBar
                 android:id="@+id/progress_bar"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_centerInParent="true"/>
     </RelativeLayout>
