added event coordinates

--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -169,6 +169,7 @@
 
             <FrameLayout
                     android:layout_width="match_parent"
+                    android:id="@+id/map_frame"
                     android:layout_height="200dp">
 
                 <fragment
