--- a/app/src/main/res/layout/activity_cities.xml
+++ b/app/src/main/res/layout/activity_cities.xml
@@ -89,6 +89,8 @@
 
         <ProgressBar
                 android:id="@+id/progress_bar"
+                android:indeterminateDrawable="@drawable/progress"
+                android:indeterminateOnly="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
